# QuantProteomicsSimBox

./: AGENTS.md  README.md  pyproject.toml
docs/: GUIDE.md
notebooks/: playground.ipynb  stoichiometry_analysis.ipynb  template.ipynb
results/: ptm_sweep.csv  stoichiometry_sweep.csv
scripts/: run_ptm_sweep.py
src/quantproteomicssimbox/: __init__.py  experiment.py  methods.py  observation.py  playground.ipynb  protgen.py  rollups.py  sweep.py  utils.py
src/quantproteomicssimbox/protgen/: __init__.py  generator.py  peptide.py  protein.py  truth.py
src/quantproteomicssimbox/rollups/: __init__.py  core.py  intensity.py  stoichiometry.py
tests/: conftest.py  test_experiment.py  test_methods.py  test_observation.py  test_protgen.py  test_rollups.py  test_sweep.py  test_utils.py
