[project]
name = "quantproteomicssimbox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Peter Cruz Parrilla", email = "peter.cruzparrilla@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
]

[build-system]
requires = ["uv_build>=0.9.3,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
